src/styles/views/_Home.scss
#Home {
    margin-left: 5%;
    max-width: 90%;
    height: 90vh;
    @media (max-width: $breakpoint-md) {}
    #intro {
        display: flex;
        justify-content: center;
        align-items: center;
        #picture-container {
            display: flex;
            flex-direction: column;
            justify-content: center;
            align-items: center;
            max-height: 200px;
            @media (min-width: $breakpoint-md) {
                margin-right: 30px;
            }
            img {
                height: 200px;
                border: 4px solid $accent-color;
                border-radius: 120px;
                @media (max-width: $breakpoint-md) {
                    margin-top: 10px;
                    height: 120px;
                }
            }
            .social-container {
                display: flex;
                justify-content: space-around;
                margin-top: 5px;
                width: 100%;
                max-width: 200px;
                img {
                    width: 40px;
                    margin: 5px;
                    height: auto;
                    border: none;
                }
            }
        }
        #text-container {
            display: flex;
            height: auto;
            flex-direction: column;
            justify-content: center;
            align-items: center;
            padding-top: 10px;
            text-align: center;
            @media (max-width: $breakpoint-sm) {
                padding: 5px;
            }
            h1,
            h2 {
                margin: 0;
                padding: 0;
            }
            h6 {
                padding: 2px 5px 2px 5px;
                margin-bottom: 2px;
                margin-top: 5px;
                border: solid 1px black;
                border-radius: 10px;
                background: rgba(255, 255, 255, 0.671);
            }
            p {
                margin: 5px;
                width: 80%;
                @media (max-width: $breakpoint-sm) {
                    width: 95%;
                    font-size: 0.9em;
                }
            }
            a {
                text-decoration: none;
                color: rgba(255, 255, 255, 0.637);
            }
            a:hover {
                color: white;
            }
        }
    }
}

